--- a/assets/css/mystyle.css
+++ b/assets/css/mystyle.css
@@ -12,14 +12,19 @@ header {
     margin: 0;
 }
 
-
+/* Header section starts */
 header a {
     text-decoration: none; 
     color: #1d1d1b;
+    color: var(--tertiary);
+  margin: 5px 0 20px;
+  font-size: 2rem;
  }
-
- 
-
+ header p {
+  color: var(--tertiary);
+  margin: 5px 0 20px;
+  font-size: 2rem;
+ }
  header nav ul {
     display: flex;
     flex-wrap: wrap;
@@ -48,26 +53,3 @@ header a {
   text-align: center;
 }
 
-
-
-
- /*.btn {
-    border: none;
-    background-color: rgb(21, 29, 95);
-    border-radius: 10px;
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 6px 0px rgba(0, 0, 0, 0.2) 0px 1px 1px
-      0px;
-    color: hsl(0, 0%, 100%);
-    display: inline-block;
-    font-size: 20px;
-    line-height: 10px;
-    margin: 16px 16px 16px 20px;
-    padding: 14px 34px;
-    text-align: center;
-    cursor: pointer;
-  }
-
-  button[disabled] {
-    cursor: default;
-    background: #c0c7cf;
-  }
